--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,13 +6,14 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row">
-        <td>GPS 938</td>
-        <td>Positioning</td>
-        <td>true</td>
-        <td>HIGH</td>
-        <td>2001-11-01</td>
-    </tr>
+ <tr *ngFor="let source of satellites">
+    <td>{{source.name}}</td>
+    <td>{{source.type}}</td>
+    <td>{{source.operational}}</td>
+    <td>{{source.orbitType}}</td>
+    <td>{{source.launchDate}}</td>
+
+ </tr>
 </table>
 
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
