--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,33 @@
 <h3>Satellite Count:</h3>
-<div class="counts">
-	<div>Total: <span class="counts-total">NaN</span></div>
+<div  class="counts">
+	<div >
+		Total: <span  class="counts-total" >{{countByType('Communication')+ countByType('Probe')+countByType('Space Station')+countByType('Telescope')+countByType('Positioning')+countByType('Space Debris')}}</span>
+		
+	</div>
+	<div >
+		Space Debris: <span>{{countByType('Space Debris')}}</span>
+		
+	</div>
+	<div >
+		Communication: <span>{{countByType('Communication')}}</span>
+		
+	</div>
+	<div >
+		Probe: <span>{{countByType('Probe')}}</span>
+		
+	</div>
+	<div >
+		Telescope: <span>{{countByType('Telescope')}}</span>
+		
+	</div>
+	<div >
+		Space Station: <span>{{countByType('Space Station')}}</span>
+		
+	</div>
+	<div >
+		Positioning: <span>{{countByType('Positioning')}}</span>
+		
+	</div>
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
