--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,15 +6,19 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
- <tr *ngFor="let source of satellites">
-    <td>{{source.name}}</td>
-    <td>{{source.type}}</td>
-    <td>{{source.operational}}</td>
-    <td>{{source.orbitType}}</td>
-    <td>{{source.launchDate}}</td>
+ <tr *ngFor="let satellite of satellites">
+    <td>{{satellite.name}}</td>
+    <td [ngClass]="{'warning' :satellite.type==='Space Debris'}">{{satellite.type}}</td>
+    <!-- <td *ngIf=Satellite.isSpaceDebris()>{{satellite.type}}</td> -->
+    <td>{{satellite.operational}}</td>
+    <td>{{satellite.orbitType}}</td>
+    <td>{{satellite.launchDate}}</td>
 
  </tr>
 </table>
+<ng-template #class>
+    <td [ngClass]="'warning'">{{satellite.type}}</td>
+</ng-template>
 
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
 <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
