--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -4,30 +4,8 @@
 		Total: <span  class="counts-total" >{{countByType('Communication')+ countByType('Probe')+countByType('Space Station')+countByType('Telescope')+countByType('Positioning')+countByType('Space Debris')}}</span>
 		
 	</div>
-	<div >
-		Space Debris: <span>{{countByType('Space Debris')}}</span>
-		
-	</div>
-	<div >
-		Communication: <span>{{countByType('Communication')}}</span>
-		
-	</div>
-	<div >
-		Probe: <span>{{countByType('Probe')}}</span>
-		
-	</div>
-	<div >
-		Telescope: <span>{{countByType('Telescope')}}</span>
-		
-	</div>
-	<div >
-		Space Station: <span>{{countByType('Space Station')}}</span>
-		
-	</div>
-	<div >
-		Positioning: <span>{{countByType('Positioning')}}</span>
-		
-	</div>
+	<div *ngFor="let satellite of satellites">{{satellite.name}} : <span class="count-total">  {{countByType(satellite.type)}}</span> </div>
+
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
