--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,7 +6,7 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
- <tr *ngFor="let satellite of satellites">
+ <tr class="tr-row" *ngFor="let satellite of satellites">
     <td>{{satellite.name}}</td>
     <td [ngClass]="{'warning' :satellite.type==='Space Debris'}">{{satellite.type}}</td>
     <!-- <td *ngIf=Satellite.isSpaceDebris()>{{satellite.type}}</td> -->
